kubernetes-stack/yamls-pre-chaos/VirtualServices/mg-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mg-v1-vs
spec:
  hosts:
  - mg-v1
  http:
  - route:
    - destination:
        host: mg-v1
        port:
          number: 8081
        subset: primary
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mg-v1
  #namespace: istio-system
spec:
  host: mg-v1.default.svc.cluster.local
  trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 1m
        consecutive5xxErrors: 1
        consecutiveGatewayErrors: 5
        interval: 1m
        maxEjectionPercent: 100
  subsets:
  - name: primary
    labels:
      release: primary
#  - name: secondary
#    labels:
#       release: secondary
