kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-create-vs.yaml
#
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: ms-create-vs
#spec:
#  tcp:
#  - route:
#    - destination:
#        host: ms-create
#        port:
#          number: 8086
#
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-create-vs
spec:
  hosts:
  - ms-create
  http:
  - route:
    - destination:
        host: ms-create
        port:
          number: 8086
