kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-delete-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-delete-vs
spec:
  hosts:
  - ms-delete
  http:
  - route:
    - destination:
        host: ms-delete
        port:
          number: 8087
