kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-mailer-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-mailer-vs
spec:
  hosts:
  - ms-mailer
  http:
  - route:
    - destination:
        host: ms-mailer
        port:
          number: 8090
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
