kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-read-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-read-vs
spec:
  hosts:
  - ms-read
  http:
  - route:
    - destination:
        host: ms-read
        port:
          number: 8088
        subset: primary
---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-read
  #namespace: istio-system
spec:
  host: ms-read.default.svc.cluster.local
  trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 5m
        consecutive5xxErrors: 1
        consecutiveGatewayErrors: 5
        interval: 5m
        maxEjectionPercent: 100
  subsets:
  - name: primary
    labels:
      app: read-app
      component: ms-read
