kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-sender-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-sender-vs
spec:
  hosts:
  - ms-sender
  http:
  - route:
    - destination:
        host: ms-sender
        port:
          number: 8091
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
