kubernetes-stack/yamls-pre-chaos/VirtualServices/ms-update-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-update-vs
spec:
  hosts:
  - ms-update
  http:
  - route:
    - destination:
        host: ms-update
        port:
          number: 8089
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
